# moscowliuda-webinar-utils

./: .gitignore  .mypy.ini  Makefile  add_text_to_image.py  api.py  contacts.py  email.py  factory.py  images.py  models.py  participants.py  protocols.py  pyproject.toml  pytest.ini  requirements.txt  roadmap.todo  send_email.py  send_mail.py  server.py  sheets.py  storage.py  views.py  webinar.py  word_morph.py
db/migrations/: 001-create-user-and-webinar-table.sql  002-add-inflect-tables.sql
lib/: api.py  const.py  contacts.py  db.py  environment.py  factory.py  images.py  logging.py  participants.py  paths.py  protocols.py  send_email.py  server.py  sheets.py  storage.py  utils.py  views.py  webinar.py  word_morph.py
lib/clients/: db.py  email.py  mail.py
lib/domain/: base.py  certificate.py
lib/domain/certificate/: __init__.py  model.py  service.py
lib/domain/certificate/serializer/: __init__.py  png_serializer.py  protocol.py
lib/domain/certificate/serializer/png/: __init__.py  paths.py  png_serializer.py
lib/domain/certificate/serializer/text/: __init__.py  serializer.py
lib/domain/contact/: models.py  repository.py  service.py
lib/domain/contacts/: repository.py  service.py
lib/domain/email/: service.py
lib/domain/inflect/: inflector.py  models.py  repository.py  service.py
lib/domain/webinar/: enums.py  errors.py  models.py  repository.py  service.py
lib/templates/: base.html  error.html  webinarImport.html  webinarList.html  webinarView.html
lib/webui/: app.py  routes.py  views.py
templates/: base.html  webinar.html  webinars_list.html
tests/: common.py  conftest.py  test_certificate_generator.py  test_contacts.py  test_email.py  test_factory.py  test_models.py  test_participants.py  test_participants_data_normalize.py  test_storage.py  test_title.py  test_utils.py  test_webinar.py  test_word_morph.py
tests/clients/: test_db.py  test_email.py
tests/domain/certificate/: test_certificate_service.py
tests/domain/contacts/: test_contacts_service.py
tests/domain/email/: test_email_service.py
tests/domain/inflect/: test_infect_service.py  test_inflect_repository.py  test_inflector.py
tests/domain/webinar/: test_webinar_repository.py
