[tool.poetry]
name = "moscowliuda-webinar"
version = "1.0.0"
description = "Automation for @moscowliuda webinar"
authors = ["Anton Demkin <antondemkin@yandex.ru>"]
packages = [
    { include = "lib" },
]
classifiers = [
    "Private :: Do Not Upload"
]

[tool.poetry.dependencies]
python = "^3.13"
loguru = "^0.7.3"
python-dotenv = "^1.0.1"
yagmail = "^0.15.293"
gspread = "^6.1.4"
click = "^8.1.8"
pillow = "^11.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.5"
pytest = "^8.3.4"
pytest-coverage = "^0.0"
pylint = "^3.3.3"
mypy = "^1.14.1"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
disable = [
    'missing-function-docstring',
    'missing-class-docstring',
    'missing-module-docstring',
    'line-too-long',
    'broad-except',
    'invalid-name',
    'too-many-arguments',
    'too-few-public-methods',
    'too-many-instance-attributes',
    'fixme',
    'duplicate-code',
    'invalid-field-call',
    'too-many-positional-arguments',
]
load-plugins = 'pylint.extensions.no_self_use'

[tool.isort]
force_single_line = true
line_length = 100
py_version = 312

[tool.black]
line-length = 100

[tool.mypy]
no_strict_optional = true
warn_unreachable = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
disallow_incomplete_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true
module = "tests.*"

[[tool.mypy.overrides]]
module = "gspread.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yagmail.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-ignore = ["UP035"]

[tool.ruff.format]
quote-style = "double"
